--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
-    "react-native-webview": "^13.12.1"
+    "react-native-webview": "^13.12.1",
+    "expo-image": "~1.12.15",
+    "expo-asset": "~10.0.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
