--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "expo": "^51.0.32",
+    "expo-asset": "~10.0.10",
     "expo-constants": "~16.0.1",
     "expo-dev-client": "~4.0.14",
     "expo-dev-launcher": "^4.0.22",
+    "expo-image": "~1.12.15",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.14",
     "expo-status-bar": "~1.12.1",
@@ -31,14 +33,13 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
-    "react-native-webview": "^13.12.1",
-    "expo-image": "~1.12.15",
-    "expo-asset": "~10.0.10"
+    "react-native-webview": "^13.12.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
